--- a/index.html
+++ b/index.html
@@ -6,4 +6,4 @@ Hi! I'm Sjoerd.
 <br>
 I'm a designer.
 
-<img src="graphic_design_is_my_passion" alt="Design frog">
+<img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fknowyourmeme.com%2Fmemes%2Fgraphic-design-is-my-passion&psig=AOvVaw3IHVAcAVNg14WHC1BFlLGv&ust=1669887204608000&source=images&cd=vfe&ved=0CBAQjRxqFwoTCMjR_9_M1fsCFQAAAAAdAAAAABAE" alt="Design frog">
