--- a/index.html
+++ b/index.html
@@ -1,9 +1,24 @@
-Hi! I'm Sjoerd. 
+<!DOCTYPE html>
+<!-- this is a comment (ctrl + ?) -->
+<html lang="en">
+    <!-- start of html website code -->
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Sjoerd van Rietbergen">
+    <meta name="description" content="I'm a first year Master Student, studying Integrated Product Design.">
+    <title>Sjoerd van Rietbergen</title>
+</head>
+<body>
+    
+</body>
+</html>
+<!-- end of html. No more code after this -->
+<!--Hi! I'm Sjoerd. 
 <br> 
 <br>
 <br>
 <br>
 <br>
-I'm a designer.
-
-<img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fknowyourmeme.com%2Fmemes%2Fgraphic-design-is-my-passion&psig=AOvVaw3IHVAcAVNg14WHC1BFlLGv&ust=1669887204608000&source=images&cd=vfe&ved=0CBAQjRxqFwoTCMjR_9_M1fsCFQAAAAAdAAAAABAE" alt="Design frog">
+I'm a designer.  -->
