adding text and stuff

--- a/index.html
+++ b/index.html
@@ -11,7 +11,34 @@
     <title>Sjoerd van Rietbergen</title>
 </head>
 <body>
-    
+    <!-- EVERYTHING PEOPLE SEE GOES HERE -->
+    <h1>Sjoerd van Rietberen</h1>
+    <!-- <h2>bladiebla</h2> -->
+    <h3>Student Integrated Product Design</h3>
+    <!-- <h4>bladiebla</h4>
+    <h5>bladiebla</h5>
+    <h6>bladiebla</h6> -->
+    <img src="./sjoerd_foto.png" alt="my headshot" width="50" height="300">
+    <p>Hi! I'm Sjoerd. I'm a first year master student studying <a href="https://www.tudelft.nl/onderwijs/opleidingen/masters/ipd/msc-integrated-product-design"> Integrated Product Design </a> @<a href="https://www.tudelft.nl/io">faculty Industrial Design Engineering</a></p>
+    <p>And to me design is <strong> all about the user </strong>. User satisfaction is always my main concern when designing.
+        <br>
+        <strong>Combining user interaction with technology</strong> and <strong>sustainability </strong> is my passion.
+        <br>
+        As a designer I am very <strong>curious</strong> and <strong>open-minded</strong>. I am always willing to <strong>try new things</strong>
+        <br>
+        and to try them <strong>my way</strong>, since I get a lot of energy out of exploring new programs and methods.
+        <br>
+        My skills lie within <strong>prototyping</strong>, <strong>digital fabrication</strong>, <strong>embodiment design</strong> and <strong>biomechanics</strong>.
+        <br>
+        With this knowledge I would like to design products that actually <strong>help</strong> and <strong>excite</strong> people.</p>
+    <p>
+        <a href="https://www.linkedin.com/in/sjoerd-van-rietbergen-84a0a3257/" target="_blank">LinkedIn</a>
+        <a> - </a>
+        <a href="./portfolio_Sjoerd.pdf" target="_blank">Portfolio</a>
+        <a> - </a>
+        <a href="mailto:S.vanRietbergen@student.tudelft.nl">E-mail</a>
+        <!-- <a href="tel:+31630759850">Phone</a> -->
+    </p>
 </body>
 </html>
 <!-- end of html. No more code after this -->
