--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h5>bladiebla</h5>
     <h6>bladiebla</h6> -->
     <img src="./sjoerd_foto.png" alt="my headshot" width="50" height="300">
-    <p>Hi! I'm Sjoerd. I'm a first year master student studying <a href="https://www.tudelft.nl/onderwijs/opleidingen/masters/ipd/msc-integrated-product-design"> Integrated Product Design </a> @<a href="https://www.tudelft.nl/io">faculty Industrial Design Engineering</a></p>
+    <p>Hi! I'm Sjoerd. I'm a first year master student studying <a href="https://www.tudelft.nl/onderwijs/opleidingen/masters/ipd/msc-integrated-product-design"> Integrated Product Design </a> @<a href="https://www.tudelft.nl/io">IDE TU Delft</a></p>
     <p>And to me design is <strong> all about the user </strong>. User satisfaction is always my main concern when designing.
         <br>
         <strong>Combining user interaction with technology</strong> and <strong>sustainability </strong> is my passion.
@@ -33,9 +33,9 @@
         With this knowledge I would like to design products that actually <strong>help</strong> and <strong>excite</strong> people.</p>
     <p>
         <a href="https://www.linkedin.com/in/sjoerd-van-rietbergen-84a0a3257/" target="_blank">LinkedIn</a>
-        <a> - </a>
+        <a>  &#9730;  </a>
         <a href="./portfolio_Sjoerd.pdf" target="_blank">Portfolio</a>
-        <a> - </a>
+        <a>  &#9730;  </a>
         <a href="mailto:S.vanRietbergen@student.tudelft.nl">E-mail</a>
         <!-- <a href="tel:+31630759850">Phone</a> -->
     </p>
